# Bartimaeus_app

./: .clang-format  .clangd  .cursorrules  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  EXCEPTIONS.md  PROJECT_GUIDELINES.md  Web_Application_Guide.md  csrf.html  run.ps1  run.sh  server.db  주요정보통신기반시설 기술적 취약점 분석·평가 방법 상세가이드.md
certs/: cert.pem  key.pem
public/: admin.html  admin.js  board.html  error.html  index.html  index.js  login.html  signup.html  signup.js
public/js/: board.js  index.js  login.js
src/: db_queries.hpp  helpers.hpp  main.cpp  middleware.hpp
src/controllers/: auth_controller.hpp  board_controller.hpp
src/services/: auth_service.hpp  board_service.hpp  login_limiter.hpp  session_manager.hpp
